<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/checkin_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/checkin_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_title_label" />

        <EditText
            android:id="@+id/checkin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkin_title_hint" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_place_label" />

        <EditText
            android:id="@+id/checkin_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkin_place_hint"/>
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_details_label"/>
        <EditText
            android:id="@+id/checkin_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkin_details_hint"/>
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_title"/>
        <Button
            android:id="@+id/checkin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/checkin_location_text"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/checkin_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkin_location_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <Button
            android:id="@+id/checkin_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_delete_text"/>
    </LinearLayout>
</ScrollView>